# tf-project

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: my_tf.py
src/tf_project/: __init__.py  __main__.py  banner.py  cli.py  commands.py  config.py  lock.py  secrets.py  self_commands.py  state.py  terraform.py
tests/: conftest.py  test_banner.py  test_cli.py  test_cli_subprocess.py  test_commands.py  test_config.py  test_runtime.py  test_self_commands.py  test_smoke_e2e.py  test_smoke_fmt.py  test_state.py
